ajustando nome da pagina

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Biblioteca Virtual</title>
+  <title>CLIO</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favico.ico">
+  <link rel="icon" type="image/x-icon" href="CLIO.ico">
 </head>
 <body>
   <app-root></app-root>
